# R2X

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.html  README.md  cliff.toml  codecov.yml  environment.yml  fuels.csv  genindex.html  howtos.html  index.html  install.html  nodal.html  objects.inv  py-modindex.html  pyproject.toml  release_notes.html  search.html  searchindex.js  troubleshoot.html  usage.html  user_dict.yaml
.doctrees/: CHANGELOG.doctree  howtos.doctree  install.doctree  nodal.doctree  release_notes.doctree  troubleshoot.doctree  usage.doctree
.doctrees/api/: models.doctree  plexos.doctree
.doctrees/dev/: develop.doctree  git.doctree  plexos_db.doctree
.doctrees/model/: diagram.doctree  logic.doctree  models.doctree  terminology.doctree
.github/ISSUE_TEMPLATE/: bug.md  chore.md  feat.md
.github/workflows/: CI.yaml  docs-build.yaml  publish_pypi.yaml  python-app.yaml  release.yaml
_sources/: CHANGELOG.md  index.md  install.md  nodal.md  release_notes.md  troubleshoot.md  usage.md
_sources/api/: config.md  enums.md  exporters.md  models.md  parsers.md  plexos.md  system.md
_sources/dev/: develop.md  git.md  plexos_db.md
_sources/model/: diagram.md  logic.md  models.md  terminology.md
api/: config.html  enums.html  exporters.html  models.html  parsers.html  plexos.html  system.html
dev/: develop.html  git.html  plexos_db.html
docs/: Makefile
docs/source/: CHANGELOG.md  conf.py  howtos.md  index.md  install.md  troubleshoot.md  usage.md
docs/source/api/: config.md  models.md  parsers.md  plexos.md  system.md
docs/source/dev/: develop.md  git.md
docs/source/model/: data_models.md  logic.md  models.md
docs/stylesheets/: nrel.css  style.css
model/: data_models.html  diagram.html  logic.html  models.html  terminology.html
schemas/: README.md  generate_sienna_models.sh
schemas/templates/: model_generic.mustache
src/r2x/: __init__.py  __main__.py  __version__.py  api.py  cli.py  cli_functions.py  config.py  config_models.py  config_scenario.py  config_utils.py  core.py  enums.py  exceptions.py  logger.py  model.py  runner.py  units.py  utils.py  validation.py
src/r2x/defaults/: config.json  example_defaults_override.yml  mapping_schema.json  month_hrs.csv  pcm_defaults.json  plexos_input.json  plexos_mapping.json  plexos_output.json  plexos_reports.json  plexos_simulation_objects.json  plugins_config.json  reeds_india_input.json  reeds_india_mapping.json  reeds_input.json  reeds_us_mapping.json  sienna_config.json  sienna_mapping.json  user_dict.yaml
src/r2x/exporter/: __init__.py  handler.py  plexos.py  sienna.py  utils.py
src/r2x/models/: __init__.py  attributes.py  branch.py  core.py  costs.py  generators.py  getters.py  load.py  named_tuples.py  plexos.py  services.py  topology.py  utils.py
src/r2x/parser/: __init__.py  handler.py  handler_utils.py  parser_helpers.py  plexos.py  plexos_utils.py  polars_helpers.py  reeds.py
src/r2x/plugin_manager/: __init__.py  defaults.py  interfaces.py  plugin_manager.py  utils.py
src/r2x/plugins/: break_gens.py  cambium.py  ccs_credit.py  electrolyzer.py  emission_cap.py  hookspec.py  hurdle_rate.py  imports.py  pcm_defaults.py  utils.py
src/r2x/upgrader/: __init__.py  checks.py  file_tracker.csv  functions.py  helpers.py
tests/: conftest.py  test_api.py  test_break_gens.py  test_configuration_class.py  test_configuration_utils.py  test_csv_handler.py  test_defaults.py  test_exporter.py  test_exporter_handler.py  test_exporter_utils.py  test_getter_funcs.py  test_models.py  test_operational_cost.py  test_parser_handler.py  test_parser_helper.py  test_parser_utils.py  test_plexos_exporter.py  test_plexos_parser.py  test_plexos_utils.py  test_plugin_emission_cap.py  test_plugin_hurdle_rate.py  test_plugin_pcm_defaults.py  test_reeds_parser.py  test_round_trip.py  test_runner.py  test_sienna_exporter.py  test_systems.py  test_translations.py  test_upgrader.py  test_utils.py  utils.py
tests/data/: 2-bus_example.xml  pjm_2area_data.json
tests/data/5_bus_system_variables/: load_ts_LDES.csv  solar_capacity.csv  solar_ts.csv  solar_ts_02.csv  thermal_vom.csv
tests/data/pacific/inputs_case/: bcr.csv  biosupply.csv  cap_hyd_szn_adj.csv  capture_rate.csv  cendiv.csv  cf_hyd.csv  co2_cap.csv  co2_captured_incentive.csv  degrade_annual.csv  e.csv  h_szn.csv  hmap_myr.csv  hours.csv  hydcapadj.csv  hydcf.csv  hydcfadj.csv  hydmin.csv  hydro_mingen.csv  load.h5  modeledyears.csv  outage_forced.csv  outage_planned.csv  planned_outage.csv  r.csv  recf.h5  reeds_ba_tz_map.csv  repbioprice.csv  repgasprice.csv  repgasprice_nat.csv  repgasprice_r.csv  switches.csv  valcap_i.csv
tests/data/pacific/outputs/: cap_ivrt.csv  cap_new_ivrt.csv  cf_adj_t.csv  cost_vom.csv  emit_rate.csv  forced_outage.csv  fuel2tech.csv  fuel_price.csv  heat_rate.csv  hierarchy.csv  ilr.csv  opRes_supply.csv  ptc_out.csv  repbioprice.csv  repgasprice.csv  repgasprice_r.csv  ret_ivrt.csv  storage_duration.csv  storage_eff.csv  tran_cap_energy.csv  tran_out.csv  tranloss.csv  v.csv
tests/data/pjm_2area/: pjm_2area.json
tests/data/pjm_2area/Data/: PowerLoad_max_active_power_pjm_2area_2024.csv  PowerLoad_max_active_power_system_2012.csv  RenewableDispatch_max_active_power_pjm_2area_2024.csv  RenewableDispatch_max_active_power_system_2012.csv  RenewableDispatch_rated_capacity_pjm_2area_2024.csv  RenewableDispatch_rated_capacity_system_2012.csv
tests/data/pjm_2area/pjm_2area_time_series/: 0550c507-89a0-46b4-9305-a784460a756f.arrow  07722610-8d19-4e4b-88fb-c23697545a43.arrow  0cc21da8-2f22-4f9c-868a-c81ee7d779c3.arrow  0cdeeb33-104c-4f55-a521-a3bb7a8d0c04.arrow  13f38e44-868e-4f3b-8800-0e848f72bb6a.arrow  (+68 more)
tests/mock_external_plugin/: setup.py
tests/mock_external_plugin/module/: plugin.py
tests/mock_external_plugin/r2x_mock_plugin/: exporter.py  parser.py  plugin.py  sysmod.py
tests/models/: __init__.py  ieee5bus.py  pjm.py  sys2bus.py  systems.py
tests/upgrader/: conftest.py  test_h5_files.py  test_upgrader.py  test_upgrader_helpers.py
(+8 files in other folders)
